--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-
+<h1 id="title">Welcome!</h1>
 <div id="article_text">
   <p>
     lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu fermentum felis. Praesent facilisis mauris velit,
