--- a/contact/index.html
+++ b/contact/index.html
@@ -1,7 +1,9 @@
 ---
 layout: Flayout
 ---
+<div id="article_heading">
             <h2>Contact</h2>
+</div>
 <!-- Begin Mailchimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
 <style type="text/css">
