--- a/projects/index.html
+++ b/projects/index.html
@@ -2,5 +2,15 @@
 layout: Flayout
 ---
 <div id="article_heading">
-<h2>Projects</h2>
+    <h1>Projects</h1>
+</div>
+<div id="article_text">
+    <h2>Mini Projects</h2>
+    <ul>
+        <li><a href="https://github.com/cjl72/MiniProject_1">Mini Project 1</a></li>
+        <li><a href="https://cjl72.github.io">Mini Project 2</a></li>
+        <li><a href="">Mini Project 3</a></li>
+        <li><a href="">Mini Project 4</a></li>
+    </ul>
+
 </div>
