--- a/writings/index.html
+++ b/writings/index.html
@@ -2,5 +2,9 @@
 layout: Flayout
 ---
 <div id="article_heading">
-<h2>Writings</h2>
+    <h1>Writing</h1>
+</div>
+<div id="article_text">
+    <h1>Git/Linux tutorial </h1>
+    <p>https://github.com/cjl72/MiniProject_1</p>
 </div>
