Feature: writings - note

--- a/writings/index.html
+++ b/writings/index.html
@@ -7,4 +7,5 @@ layout: Flayout
 <div id="article_text">
     <h1>Git/Linux tutorial </h1>
     <p>https://github.com/cjl72/MiniProject_1</p>
+    <p>In progress </p>
 </div>
