Feature: intro writing

--- a/writings/index.html
+++ b/writings/index.html
@@ -5,7 +5,17 @@ layout: Flayout
     <h1>Writing</h1>
 </div>
 <div id="article_text">
-    <h1>Git/Linux tutorial </h1>
-    <p>https://github.com/cjl72/MiniProject_1</p>
-    <p>In progress </p>
+    <h2>Git/Linux tutorial </h2>
+    <h3>Vi, Files, and Basic Commands </h3>
+    <p>Linux is a terminal-based operating system that uses commands to operate. Type specific operations to accomplish
+        tasks. Once the command is entered it will only be executed once enter is pressed. Commands are case sensitive.
+        This system is used for faster and efficient work through the lightweight system.
+        <p>Vi is the text editor for this system. It can be used to create and edit text files. Here is a tutorial for Vi:
+        <a href="https://youtu.be/pU2k776i2Zw">Vi Tutorial</a> </p>
+    <p>Here are some basic commands in the Linux operating system. Here is the key:</p>
+    <ol>
+        <li>What is it?</li>
+        <li>Why use it?</li>
+        <li>How to use it?</li>
+    </ol>
 </div>
