Fix: writing definitions

--- a/writings/index.html
+++ b/writings/index.html
@@ -19,57 +19,82 @@ layout: Flayout
         <li>How to use it?</li>
     </ol>
 </div>
-<ul style="box-sizing: border-box; padding-left: 2em; margin-top: 0px; margin-bottom: 0px !important; color: rgb(36, 41, 46); font-family: -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, Helvetica, Arial, sans-serif, &quot;Apple Color Emoji&quot;, &quot;Segoe UI Emoji&quot;; font-size: 16px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-style: initial; text-decoration-color: initial;">
-    <li style="box-sizing: border-box;"><strong style="box-sizing: border-box; font-weight: 600;">cd</strong>
-        <ol style="box-sizing: border-box; padding-left: 2em; margin-top: 0px; margin-bottom: 0px; list-style-type: lower-roman;">
-            <li style="box-sizing: border-box;">A command that changes the working directory. Stands for ‘change directory’.</li>
-            <li style="box-sizing: border-box; margin-top: 0.25em;">To navigate directories easily and change parent directories and subdirectories</li>
-            <li style="box-sizing: border-box; margin-top: 0.25em;">$ cd [directory] You can put absolute path, $ cd ../ move up a directory, $ cd - move to the previous directory, $ cd ~ move to home directory, $ cd ~/ [directory] move to specific directory</li>
+<ul>
+    <li><strong>cd</strong>
+        <ol>
+            <li>A command that changes the working directory. Stands for &lsquo;change directory&rsquo;.</li>
+            <li>To navigate directories easily and change parent directories and subdirectories</li>
+            <li>$ cd [directory] You can put absolute path, $ cd ../ move up a directory, $ cd - move to the previous directory, $ cd ~ move to home directory, $ cd ~/ [directory] move to specific directory</li>
         </ol>
     </li>
-    <li style="box-sizing: border-box; margin-top: 0.25em;"><strong style="box-sizing: border-box; font-weight: 600;">mkdir</strong>
-        <ol style="box-sizing: border-box; padding-left: 2em; margin-top: 0px; margin-bottom: 0px; list-style-type: lower-roman;">
-            <li style="box-sizing: border-box;">command in Linux allows the user to create directories. Stands for ‘make directory’</li>
-            <li style="box-sizing: border-box; margin-top: 0.25em;">To make new directories</li>
-            <li style="box-sizing: border-box; margin-top: 0.25em;">Mkdir[directory] Creates a directory in the current location, mkdir{dir1,dir2,dir3,dir4} Creates multiple directories in the current location.</li>
+    <li><strong>mkdir</strong>
+        <ol>
+            <li>command in Linux allows the user to create directories. Stands for &lsquo;make directory&rsquo;</li>
+            <li>To make new directories</li>
+            <li>Mkdir[directory] Creates a directory in the current location, mkdir{dir1,dir2,dir3,dir4} Creates multiple directories in the current location.</li>
         </ol>
     </li>
-    <li style="box-sizing: border-box; margin-top: 0.25em;"><strong style="box-sizing: border-box; font-weight: 600;">cp</strong>
-        <ol style="box-sizing: border-box; padding-left: 2em; margin-top: 0px; margin-bottom: 0px; list-style-type: lower-roman;">
-            <li style="box-sizing: border-box;">This command is used to copy files or group of files or directory Stands for ‘copy’</li>
-            <li style="box-sizing: border-box; margin-top: 0.25em;">To move what is copied usually a directory or file</li>
-            <li style="box-sizing: border-box; margin-top: 0.25em;">cp [sourceFile destinationFile], cp -i warns before overwrite, cp -b: creates the backup of the destination file in the same folder</li>
+    <li><strong>cp</strong>
+        <ol>
+            <li>This command is used to copy files or group of files or directory Stands for &lsquo;copy&rsquo;</li>
+            <li>To move what is copied usually a directory or file</li>
+            <li>cp [sourceFile destinationFile], cp -i warns before overwrite, cp -b: creates the backup of the destination file in the same folder</li>
         </ol>
     </li>
-    <li style="box-sizing: border-box; margin-top: 0.25em;"><strong style="box-sizing: border-box; font-weight: 600;">pwd</strong>
-        <ol style="box-sizing: border-box; padding-left: 2em; margin-top: 0px; margin-bottom: 0px; list-style-type: lower-roman;">
-            <li style="box-sizing: border-box;">See what directory you are currently in. Stands for ‘Print work directory’</li>
-            <li style="box-sizing: border-box; margin-top: 0.25em;">To see what directory you are in</li>
-            <li style="box-sizing: border-box; margin-top: 0.25em;">$ pwd</li>
+    <li><strong>pwd</strong>
+        <ol>
+            <li>See what directory you are currently in. Stands for &lsquo;Print work directory&rsquo;</li>
+            <li>To see what directory you are in</li>
+            <li>$ pwd</li>
         </ol>
     </li>
-    <li style="box-sizing: border-box; margin-top: 0.25em;"><strong style="box-sizing: border-box; font-weight: 600;">mv</strong>
-        <ol style="box-sizing: border-box; padding-left: 2em; margin-top: 0px; margin-bottom: 0px; list-style-type: lower-roman;">
-            <li style="box-sizing: border-box;">It moves files or directories from one place to another. Stands for ‘move’</li>
-            <li style="box-sizing: border-box; margin-top: 0.25em;">It supports moving single files, multiple files, and directories.</li>
-            <li style="box-sizing: border-box; margin-top: 0.25em;">mv [source destination], mv -i Warns before overwrite, mv -f Confirmation of overwriting if overwrite protected, mv -b Backup existing file</li>
+    <li><strong>mv</strong>
+        <ol>
+            <li>It moves files or directories from one place to another. Stands for &lsquo;move&rsquo;</li>
+            <li>It supports moving single files, multiple files, and directories.</li>
+            <li>mv [source destination], mv -i Warns before overwrite, mv -f Confirmation of overwriting if overwrite protected, mv -b Backup existing file</li>
         </ol>
     </li>
-    <li style="box-sizing: border-box; margin-top: 0.25em;"><strong style="box-sizing: border-box; font-weight: 600;">rm</strong>
-        <ol style="box-sizing: border-box; padding-left: 2em; margin-top: 0px; margin-bottom: 0px; list-style-type: lower-roman;">
-            <li style="box-sizing: border-box;">Removes objects and directories</li>
-            <li style="box-sizing: border-box; margin-top: 0.25em;">To delete files and directories</li>
-            <li style="box-sizing: border-box; margin-top: 0.25em;">rm [file] rm -i ask confirmation, rm -f Confirm removal if protected</li>
+    <li><strong>rm</strong>
+        <ol>
+            <li>Removes objects and directories</li>
+            <li>To delete files and directories</li>
+            <li>rm [file] rm -i ask confirmation, rm -f Confirm removal if protected</li>
         </ol>
     </li>
-    <li style="box-sizing: border-box; margin-top: 0.25em;"><strong style="box-sizing: border-box; font-weight: 600;">history</strong>
-        <ol style="box-sizing: border-box; padding-left: 2em; margin-top: 0px; margin-bottom: 0px; list-style-type: lower-roman;">
-            <li style="box-sizing: border-box;">Shows the whole list of commands</li>
-            <li style="box-sizing: border-box; margin-top: 0.25em;">To show the commands used in that session</li>
-            <li style="box-sizing: border-box; margin-top: 0.25em;">$ history</li>
+    <li><strong>history</strong>
+        <ol>
+            <li>Shows the whole list of commands</li>
+            <li>To show the commands used in that session</li>
+            <li>$ history</li>
         </ol>
     </li>
-    <li style="box-sizing: border-box; margin-top: 0.25em;"><strong style="box-sizing: border-box; font-weight: 600;">Home directory and ~</strong>
-        <ol style="box-sizing: border-box; padding-left: 2em; margin-top: 0px; margin-bottom: 0px; list-style-type: lower-roman;">
-            <li style="box-sizing: border-box;">The tilde denotes the home directory</li>
-            <li style="box-sizing: border-box; margin-top: 0.25em;">Used at the beginning of a path to a file or directory below the user's home directory</li></ol>
+    <li><strong>Home directory and ~</strong>
+        <ol>
+            <li>The tilde denotes the home directory</li>
+            <li>Used at the beginning of a path to a file or directory below the user's home directory</li>
+            <li>Adding tilde roots to your home</li>
+        </ol>
+    </li>
+    <li><strong>file paths in linux</strong>
+        <ol>
+            <li>Organization methods of files and folders through directories</li>
+            <li>Instead of clicking through things, it is easier to move the files by using the direct paths</li>
+            <li>~ is used for home, tab can be used to autocomplete, literally type out where file is</li>
+        </ol>
+    </li>
+    <li><strong>Using the tab key to complete file paths</strong>
+        <ol>
+            <li>Autocomplete directory path</li>
+            <li>To go faster, type whole thing faster</li>
+            <li>Use tab whne navigating and it should autofill</li>
+        </ol>
+    </li>
+    <li><strong>Using up and down arrow for history</strong>
+        <ol>
+            <li>Shows previous commands typed</li>
+            <li>To show history</li>
+            <li>Using the up and down arrows to scroll through</li>
+        </ol>
+    </li>
+</ul>
