--- a/writings/index.html
+++ b/writings/index.html
@@ -6,6 +6,20 @@ layout: Flayout
 </div>
 <div id="article_text">
     <h2>Git/Linux tutorial </h2>
+    <h3>Introduction</h3>
+    <p><strong>Git:</strong>The branching capabilities of git is one of the greatest features that this platform has.
+        Due to this, productivity can be increased in the company by tracking all the changes and having multiple people
+        work on the same thing at once. Collaboration is easier so that changes are merged instead of overwritten.
+        Everything has a process that is very integrative.</p>
+    <p><strong>Docker:</strong>Docker makes containers easy to use. Many major companies use docker because it is
+        efficient in using system resources. This enables continuous integration and continuous deployment which adds
+        to the efficiency of code through integration. It is so portable the containers can be run almost anywhere.</p>
+    <p><strong>Automated testing:</strong>Test automation is the use of software separate from the software being
+        tested to test the created software. It tests actual outcomes versus predicted outcomes. By using automated
+        testing, the testing goes much faster than a person could do with much more accuracy.</p>
+    <p><strong>Continuous Integration:</strong>This is a development practice that requires code integration into a
+        shared repository several times a day. Then it is checked automatically to check for problems early on.
+        Using Git, Docker and automated testing allow for continuous integrations.</p>
     <h3>Vi, Files, and Basic Commands </h3>
     <p>Linux is a terminal-based operating system that uses commands to operate. Type specific operations to accomplish
         tasks. Once the command is entered it will only be executed once enter is pressed. Commands are case sensitive.
