--- a/writings/index.html
+++ b/writings/index.html
@@ -20,6 +20,114 @@ layout: Flayout
     <p><strong>Continuous Integration:</strong>This is a development practice that requires code integration into a
         shared repository several times a day. Then it is checked automatically to check for problems early on.
         Using Git, Docker and automated testing allow for continuous integrations.</p>
+
+    <h3>Gitflow and Definitions</h3>
+    <p>GitFlow is a branching model for Git, created by Vincent Driessen. It has attracted a lot of attention because
+        it is very well suited to collaboration and scaling the development team. As it can be seen in the image below,
+        there are multiple different levels to gitFlow and how it operated with the master branch and develop branch
+        being the main branches in the gitFlow workflow. Following this type of workflow is beneficial on all levels for
+        collaboration and keeping track of the contributors.</p>
+    <p>Here is a quick easy tutorial on gitFlow:&nbsp;
+        <a href="https://www.atlassian.com/git/tutorials/comparing-workflows/gitflow-workflow" rel="nofollow">
+            gitFlow Tutorial</a></p>
+    <h3>Git Features</h3>
+    <ul>
+        <li>Repository
+            <ol>
+                <li>The main basic function of GitHub is repositories. A repository if where the files for a single
+                    project get stored, and they are easily accessed through a specific URL.</li>
+                <li>The command for this is git init, this will turn a directory into an empty repository.</li>
+            </ol>
+        </li>
+        <li>Clone
+            <ol>
+                <li>As for cloning, this function as stated before is downloading a copy of the source code, or text.
+                    The copy on your computer will sync with the original file on GitHub, practically acting as a backup
+
+                    for your project.</li>
+                <li>The command for this is git clone &lt;remote_URL&gt;</li>
+            </ol>
+        </li>
+        <li>Fork
+            <ol>
+                <li>A fork is a copy of a repository, this allows someone to make changes that will not go directly to
+                    the repository.</li>
+                <li>Forking uses the same command as cloning. On github there is a fork button seperate from the clone
+                    button, but in bash they are they do the same thing.</li>
+            </ol>
+        </li>
+        <li>Branch
+            <ol>
+                <li>The connections between all the pushing and pulling is documented as branches. These branches can
+                    all be seen in the branches tab on the main page of your repository. It will show the branches that
+                    you have pushed to, branches that people have committed to, and even branches that noone has
+                    committed to recently.</li>
+                <li>git branch &lt;branch_name&gt; will create a branch and branches can be viewed with git branch -a
+                    and deleted with git branch -d&lt;branch_name&gt;</li>
+            </ol>
+        </li>
+        <li>Commit
+            <ol>
+                <li>A commit is a revision or an edit on your project. This can be done by clicking the edit button on
+                    the top right of your repository and proceeding to edit your document and hit commit changes on the
+                    bottom left when finished. This will document the time of changes and what changes.</li>
+                <li>The command for this is git commit -m "Commit Message"</li>
+            </ol>
+        </li>
+        <li>Merge
+            <ol>
+                <li>When looking at all the branches you can put all the seperate branches into on single branch.
+                    This can be useful when there are so many branches created it is hard to keep track of. The basic
+                    understanding is taking all these different committs and logging them all together. This is a merge.</li>
+                <li>The command is git merge &lt;branch_name&gt;</li>
+            </ol>
+        </li>
+        <li>Checkout
+            <ol>
+                <li>he git checkout command lets you navigate between the branches created by git branch . Checking out
+                    a branch updates the files in the working directory to match the version stored in that branch,
+                    and it tells Git to record all new commits on that branch.</li>
+                <li>The command is git checkout &lt;branch_name&gt; and git checkout -b &lt;branch_name&gt;
+                    checks out and creates a new branch.</li>
+            </ol>
+        </li>
+        <li>Push
+            <ol>
+                <li>Pushing sends your local commits to the remote repository.</li>
+                <li>the command is git push</li>
+            </ol>
+        </li>
+        <li>Pull
+            <ol>
+                <li>Pull will get the latest version of the repository. Gets the changes from remote repository
+                    and makes it local</li>
+                <li>The command for this is git pull &lt;branch_name&gt;</li>
+            </ol>
+        </li>
+        <li>Remote Add/Remove/Show
+            <ol>
+                <li>To add a remote repository you can use the command git remote &lt;remote_name&gt;&lt;remote_URL&gt;</li>
+                <li>git remote remove origin is how you remove the remote repository connection, with older versions
+                    it is git remote rm origin</li>
+                <li>you can use git remote -v to show the urls stored with the remote names</li>
+            </ol>
+        </li>
+        <li>Status
+            <ol>
+                <li>git status returns the current state of the repository. Can show if file is waiting on commits
+                    or if it is clean.</li>
+            </ol>
+        </li>
+        <li>Master Branch
+            <ol>
+                <li>As it can be seen by the above picture, the master branch is the home base per say. The master
+                    branch ponter moves forward as commits are made. It can be seen as a final product after all the
+                    commits are pushed to it.</li>
+            </ol>
+        </li>
+    </ul>
+    <p>Here is a quick tutorial on Git:&nbsp;<a href="https://www.youtube.com/watch?v=USjZcfj8yxE" rel="nofollow">
+        Git Tutorial</a></p>
     <h3>Vi, Files, and Basic Commands </h3>
     <p>Linux is a terminal-based operating system that uses commands to operate. Type specific operations to accomplish
         tasks. Once the command is entered it will only be executed once enter is pressed. Commands are case sensitive.
