--- a/writings/index.html
+++ b/writings/index.html
@@ -220,3 +220,9 @@ layout: Flayout
         </ol>
     </li>
 </ul>
+<h3><em>Sources:</em></h3>
+<p><a href="https://www.guru99.com/the-vi-editor.html" rel="nofollow">https://www.guru99.com/the-vi-editor.html</a></p>
+<p><a href="https://datasift.github.io/gitflow/IntroducingGitFlow.html" rel="nofollow">https://datasift.github.io/gitflow/IntroducingGitFlow.html</a></p>
+<p><a href="https://guides.github.com/features/mastering-markdown/">https://guides.github.com/features/mastering-markdown/</a></p>
+<p><a href="https://help.github.com/en/github/creating-cloning-and-archiving-repositories/about-readmes">https://help.github.com/en/github/creating-cloning-and-archiving-repositories/about-readmes</a></p>
+<p><a href="http://guides.beanstalkapp.com/version-control/common-git-commands.html" rel="nofollow">http://guides.beanstalkapp.com/version-control/common-git-commands.html</a></p>
