Fix: html in writing

--- a/writings/index.html
+++ b/writings/index.html
@@ -3,7 +3,8 @@ layout: Flayout
 ---
 <div id="article_heading">
     <h1>Writing</h1>
-</div>
+</div>\
+<body>
 <div id="article_text">
     <h2>Git/Linux tutorial </h2>
     <h3>Introduction</h3>
@@ -226,3 +227,5 @@ layout: Flayout
 <p><a href="https://guides.github.com/features/mastering-markdown/">https://guides.github.com/features/mastering-markdown/</a></p>
 <p><a href="https://help.github.com/en/github/creating-cloning-and-archiving-repositories/about-readmes">https://help.github.com/en/github/creating-cloning-and-archiving-repositories/about-readmes</a></p>
 <p><a href="http://guides.beanstalkapp.com/version-control/common-git-commands.html" rel="nofollow">http://guides.beanstalkapp.com/version-control/common-git-commands.html</a></p>
+
+</body>
