Fix: html in projects

--- a/projects/index.html
+++ b/projects/index.html
@@ -4,6 +4,7 @@ layout: Flayout
 <div id="article_heading">
     <h1>Projects</h1>
 </div>
+<body>
 <div id="article_text">
     <h2>Mini Projects</h2>
     <p><ol>
@@ -13,3 +14,4 @@ layout: Flayout
         <li><a href="">Mini Project 4</a></li>
     </ol>
 </div>
+</body>
