Fix: projects html

--- a/writings/index.html
+++ b/writings/index.html
@@ -3,7 +3,7 @@ layout: Flayout
 ---
 <div id="article_heading">
     <h1>Writing</h1>
-</div>\
+</div>
 <body>
 <div id="article_text">
     <h2>Git/Linux tutorial </h2>
