--- a/projects/index.html
+++ b/projects/index.html
@@ -7,11 +7,11 @@ layout: Flayout
 <body>
 <div id="article_text">
     <h2>Mini Projects</h2>
-    <p><ol>
-        <li><a href="https://github.com/cjl72/MiniProject_1">Mini Project 1</a></li>
-        <li><a href="https://cjl72.github.io">Mini Project 2</a></li>
-        <li><a href="">Mini Project 3</a></li>
-        <li><a href="">Mini Project 4</a></li>
-    </ol>
+    <p><ul>
+        <dt><a href="https://github.com/cjl72/MiniProject_1">Mini Project 1</a></dt>
+        <dt><a href="https://cjl72.github.io">Mini Project 2</a></dt>
+        <dt><a href="">Mini Project 3</a></dt>
+        <dt><a href="">Mini Project 4</a></dt>
+    </ul>
 </div>
 </body>
