--- a/index.html
+++ b/index.html
@@ -5,27 +5,27 @@ layout: default
 <h1 id="title">Welcome!</h1>
 <div id="callout_one">
   <div class="callout_heading">
-    <h1>Heading 1</h1>
+    <h1>About</h1>
   </div>
   <div class="callout_content">
-    lorem ipsum
+    <a href='{{ site.url }}/about/'>About </a>
   </div>
 
 </div>
 <div id="callout_two">
   <div class="callout_heading">
-    <h1>Heading 1</h1>
+    <h1>Resume</h1>
   </div>
   <div class="callout_content">
-    lorem ipsum
+    <a href='{{ site.url }}/resume/'>About </a>
   </div>
 </div>
 <div id="callout_three">
   <div class="callout_heading">
-    <h1>Heading 1</h1>
+    <h1>Contact</h1>
   </div>
   <div class="callout_content">
-    lorem ipsum
+    <a href='{{ site.url }}/contact/'>About </a>
   </div>
 </div>
 
