--- a/contact/index.html
+++ b/contact/index.html
@@ -2,7 +2,7 @@
 layout: Flayout
 ---
 <div id="article_heading">
-            <h2>Contact</h2>
+    <h1>About</h1>
 </div>
 <!-- Begin Mailchimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
