--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: default
     <h1>Resume</h1>
   </div>
   <div class="callout_content">
-    <a href='{{ site.url }}/resume/'>About </a>
+    <a href='{{ site.url }}/resume/'>Resume </a>
   </div>
 </div>
 <div id="callout_three">
@@ -25,7 +25,7 @@ layout: default
     <h1>Contact</h1>
   </div>
   <div class="callout_content">
-    <a href='{{ site.url }}/contact/'>About </a>
+    <a href='{{ site.url }}/contact/'>Contact </a>
   </div>
 </div>
 
