Fix: Finish personalization for Connor Letko

--- a/resume/index.html
+++ b/resume/index.html
@@ -5,7 +5,7 @@ layout: Flayout
     <h1>Resume</h1>
 </div>
 <div id="article_text">
-    <h4> Here is a downloadable link to our resume</h4>
+    <h4> Here is a downloadable link to my resume</h4>
 
-    <p> <a href="https://docs.google.com/document/d/1HuGi_GoLff4xgD3-tZJb7pOFcXsuoLQ_tzh81COR5IE/edit?usp=sharing"> Pari's Resume</a> </p>
+    <p> <a href="https://docs.google.com/document/d/1JWRzsYgOOru1ux4mNLeKPOa0OAUEVAw5LMQ3_SqjZ0U/edit?usp=sharing"> Connor's Resume</a> </p>
 </div>
