--- a/about/index.html
+++ b/about/index.html
@@ -6,12 +6,11 @@ layout: Flayout
 </div>
 <div id="article_text">
     <p>
-        Hello, my name is Connor Letko and I am currently a sophomore at New Jersey Institute of Technology.
-        I was home schooled up until high school.  This taught me many things about how to work not on restricted time.
-        I attended North Hunterdon High School in Annandale, New Jersey.  I have been working for Global Healthcare Management
-        for around 6 years.  I have recently started working for a new company named PUlse Innovations.  There I am
-        working on developing RFID technology applications to bring to market.  I am majoring in Web Information Systems
-        out of NJIT.  I hope this website can serve as an opportunity for employers to see my skills, as well as learn more about me.
-        Then use the contact for to get in contact with me if wanted.
+        Hello, my name is Pari Patel and I am a sophomore at New Jersey Institute of Technology.
+        I went to Briar Woods HS as well as Monroe Technology Center in Virginia.
+        I am a certified Pharmacy Technician. My goal is to do Health Administration.
+        Currently I am majoring in Business and Information Systems at NJIT.
+        I hope this website can serve as an opportunity for employers to see my skills, and see who I am as a person.
+        Please use the contact for to get in contact with me if interested.
     </p>
 </div>
