--- a/resume/index.html
+++ b/resume/index.html
@@ -7,5 +7,5 @@ layout: Flayout
 <div id="article_text">
     <h4> Here is a downloadable link to my resume</h4>
 
-    <p> <a href="https://docs.google.com/document/d/1JWRzsYgOOru1ux4mNLeKPOa0OAUEVAw5LMQ3_SqjZ0U/edit?usp=sharing"> Connor's Resume</a> </p>
+    <p> <a href="https://docs.google.com/document/d/1HuGi_GoLff4xgD3-tZJb7pOFcXsuoLQ_tzh81COR5IE/edit?usp=sharing"> Pari's Resume</a> </p>
 </div>
